--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         build: .
         ports: 
             - '4000:4000'
-
         volumes:
             - ./advent:/elixir-app/advent
+        environment:
+            - ADVENT_SESSION_ID=$ADVENT_SESSION_ID
